[package]
name = "file-events"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
core-foundation = "0.9"
crossbeam-channel = "0.4"
fsevent-sys = "3"